Recursive spot fix (#109)
* Fixed weird recursive bug

* Readd orphaned change

* Rebuilt docs

* Version bump

--- a/examples/docusaurus/glean/docs/api/endpoint/client/answers.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/answers.mdx
@@ -40,7 +40,6 @@ import Embedaudiencefilters from "../../../../src/components/speakeasy-embeds/lo
 import Embedcombinedanswertext from "../../../../src/components/speakeasy-embeds/loaders/combinedanswertext.tsx";
 import Embedremovedroles from "../../../../src/components/speakeasy-embeds/loaders/removedroles.tsx";
 import Embedroles from "../../../../src/components/speakeasy-embeds/loaders/roles.tsx";
-import Embedsourcedocumentspec from "../../../../src/components/speakeasy-embeds/loaders/sourcedocumentspec.tsx";
 import Embedgroup from "../../../../src/components/speakeasy-embeds/loaders/group.tsx";
 import Embedperson from "../../../../src/components/speakeasy-embeds/loaders/person.tsx";
 import Embedvalues from "../../../../src/components/speakeasy-embeds/loaders/values.tsx";
@@ -475,9 +474,9 @@ A list of user roles for the custom entity explicitly granted by the owner.
   id="data_AnswerCreationData_sourceDocumentSpec"
   headingId="operation-createanswer+request+data+answercreationdata+sourcedocumentspec"
   parentId="data_AnswerCreationData"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createanswer+request+data+answercreationdata+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+request+data+answercreationdata+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+request+data+answercreationdata+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+request+data+answercreationdata+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -486,20 +485,6 @@ A list of user roles for the custom entity explicitly granted by the owner.
 ##### sourceDocumentSpec \{#operation-createanswer+request+data+answercreationdata+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -693,9 +678,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-createanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -704,20 +689,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-createanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -2820,9 +2791,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-createanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -2831,20 +2802,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-createanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -2985,9 +2942,9 @@ A user's role with respect to a specific document.
   id="roles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-createanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec"
   parentId="roles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -2996,20 +2953,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-createanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -3377,9 +3320,9 @@ A permalink for the document.
   slot="entry"
   id="sourceDocumentSpec"
   headingId="operation-createanswer+responses+200+application-json+sourcedocumentspec"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={true}
 >
 
@@ -3388,106 +3331,6 @@ A permalink for the document.
 ##### sourceDocumentSpec \{#operation-createanswer+responses+200+application-json+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="sourceDocumentSpec_"
-  headingId="operation-createanswer+responses+200+application-json+sourcedocumentspec+"
-  parentId="sourceDocumentSpec"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-createanswer+responses+200+application-json+sourcedocumentspec+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__docType"
-  headingId="operation-createanswer+responses+200+application-json+sourcedocumentspec++doctype"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### docType \{#operation-createanswer+responses+200+application-json+sourcedocumentspec++doctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The specific type of the user generated content type.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__ugcId"
-  headingId="operation-createanswer+responses+200+application-json+sourcedocumentspec++ugcid"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcId \{#operation-createanswer+responses+200+application-json+sourcedocumentspec++ugcid\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The string id for user generated content. Used for CHATS.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__ugcType"
-  headingId="operation-createanswer+responses+200+application-json+sourcedocumentspec++ugctype"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CHATS\"","linkedLabel":"\"CHATS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcType \{#operation-createanswer+responses+200+application-json+sourcedocumentspec++ugctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The type of the user generated content (UGC datasource).
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -4112,9 +3955,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editanswer+request+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -4123,20 +3966,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+request+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -4699,9 +4528,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editanswer+request+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -4710,20 +4539,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+request+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -4864,9 +4679,9 @@ A user's role with respect to a specific document.
   id="roles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editanswer+request+roles+userrolespecification+sourcedocumentspec"
   parentId="roles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -4875,20 +4690,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+request+roles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -4904,9 +4705,9 @@ A user's role with respect to a specific document.
   slot="entry"
   id="sourceDocumentSpec"
   headingId="operation-editanswer+request+sourcedocumentspec"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+request+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={true}
 >
 
@@ -4915,106 +4716,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+request+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="sourceDocumentSpec_"
-  headingId="operation-editanswer+request+sourcedocumentspec+"
-  parentId="sourceDocumentSpec"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-editanswer+request+sourcedocumentspec+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__docType"
-  headingId="operation-editanswer+request+sourcedocumentspec++doctype"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### docType \{#operation-editanswer+request+sourcedocumentspec++doctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The specific type of the user generated content type.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__ugcId"
-  headingId="operation-editanswer+request+sourcedocumentspec++ugcid"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcId \{#operation-editanswer+request+sourcedocumentspec++ugcid\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The string id for user generated content. Used for CHATS.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__ugcType"
-  headingId="operation-editanswer+request+sourcedocumentspec++ugctype"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CHATS\"","linkedLabel":"\"CHATS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcType \{#operation-editanswer+request+sourcedocumentspec++ugctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The type of the user generated content (UGC datasource).
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -5199,9 +4900,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -5210,20 +4911,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -7326,9 +7013,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -7337,20 +7024,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -7491,9 +7164,9 @@ A user's role with respect to a specific document.
   id="roles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec"
   parentId="roles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -7502,20 +7175,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editanswer+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -7883,9 +7542,9 @@ A permalink for the document.
   slot="entry"
   id="sourceDocumentSpec"
   headingId="operation-editanswer+responses+200+application-json+sourcedocumentspec"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editanswer+responses+200+application-json+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={true}
 >
 
@@ -7894,106 +7553,6 @@ A permalink for the document.
 ##### sourceDocumentSpec \{#operation-editanswer+responses+200+application-json+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="sourceDocumentSpec_"
-  headingId="operation-editanswer+responses+200+application-json+sourcedocumentspec+"
-  parentId="sourceDocumentSpec"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-editanswer+responses+200+application-json+sourcedocumentspec+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__docType"
-  headingId="operation-editanswer+responses+200+application-json+sourcedocumentspec++doctype"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### docType \{#operation-editanswer+responses+200+application-json+sourcedocumentspec++doctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The specific type of the user generated content type.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__ugcId"
-  headingId="operation-editanswer+responses+200+application-json+sourcedocumentspec++ugcid"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcId \{#operation-editanswer+responses+200+application-json+sourcedocumentspec++ugcid\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The string id for user generated content. Used for CHATS.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sourceDocumentSpec__ugcType"
-  headingId="operation-editanswer+responses+200+application-json+sourcedocumentspec++ugctype"
-  parentId="sourceDocumentSpec_"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CHATS\"","linkedLabel":"\"CHATS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcType \{#operation-editanswer+responses+200+application-json+sourcedocumentspec++ugctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The type of the user generated content (UGC datasource).
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
