--- a/examples/docusaurus/glean/docs/api/endpoint/client/chat.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/chat.mdx
@@ -42,8 +42,6 @@ import {
   Tag,
   TagTitle
 } from "@speakeasy-api/docs-md-react";
-import Embedcontainerspecs from "../../../../src/components/speakeasy-embeds/loaders/containerspecs.tsx";
-import Embeddocumentspecs from "../../../../src/components/speakeasy-embeds/loaders/documentspecs.tsx";
 import Embedagentconfig from "../../../../src/components/speakeasy-embeds/loaders/agentconfig.tsx";
 import Embedcitations from "../../../../src/components/speakeasy-embeds/loaders/citations.tsx";
 import Embedfragments from "../../../../src/components/speakeasy-embeds/loaders/fragments.tsx";
@@ -410,7 +408,7 @@ The id of the Chat that context should be retrieved from and messages added to. 
   id="exclusions_ChatRestrictionFilters_containerSpecs"
   headingId="operation-chat+request+exclusions+chatrestrictionfilters+containerspecs"
   parentId="exclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -427,20 +425,6 @@ The id of the Chat that context should be retrieved from and messages added to. 
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="containerSpecs"
-  triggerText="View containerSpecs details"
->
-
-<Embedcontainerspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -468,7 +452,7 @@ Specifications for containers that should be used as part of the restriction (in
   id="exclusions_ChatRestrictionFilters_documentSpecs"
   headingId="operation-chat+request+exclusions+chatrestrictionfilters+documentspecs"
   parentId="exclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -485,20 +469,6 @@ Specifications for containers that should be used as part of the restriction (in
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="documentSpecs"
-  triggerText="View documentSpecs details"
->
-
-<Embeddocumentspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -550,7 +520,7 @@ Specifications for containers that should be used as part of the restriction (in
   id="inclusions_ChatRestrictionFilters_containerSpecs"
   headingId="operation-chat+request+inclusions+chatrestrictionfilters+containerspecs"
   parentId="inclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -567,20 +537,6 @@ Specifications for containers that should be used as part of the restriction (in
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="containerSpecs"
-  triggerText="View containerSpecs details"
->
-
-<Embedcontainerspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -608,7 +564,7 @@ Specifications for containers that should be used as part of the restriction (in
   id="inclusions_ChatRestrictionFilters_documentSpecs"
   headingId="operation-chat+request+inclusions+chatrestrictionfilters+documentspecs"
   parentId="inclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -625,20 +581,6 @@ Specifications for containers that should be used as part of the restriction (in
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="documentSpecs"
-  triggerText="View documentSpecs details"
->
-
-<Embeddocumentspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -3936,7 +3878,7 @@ The id of the Chat that context should be retrieved from and messages added to. 
   id="exclusions_ChatRestrictionFilters_containerSpecs"
   headingId="operation-chat_stream+request+exclusions+chatrestrictionfilters+containerspecs"
   parentId="exclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -3953,20 +3895,6 @@ The id of the Chat that context should be retrieved from and messages added to. 
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="containerSpecs"
-  triggerText="View containerSpecs details"
->
-
-<Embedcontainerspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -3994,7 +3922,7 @@ Specifications for containers that should be used as part of the restriction (in
   id="exclusions_ChatRestrictionFilters_documentSpecs"
   headingId="operation-chat_stream+request+exclusions+chatrestrictionfilters+documentspecs"
   parentId="exclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+exclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4011,20 +3939,6 @@ Specifications for containers that should be used as part of the restriction (in
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="documentSpecs"
-  triggerText="View documentSpecs details"
->
-
-<Embeddocumentspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -4076,7 +3990,7 @@ Specifications for containers that should be used as part of the restriction (in
   id="inclusions_ChatRestrictionFilters_containerSpecs"
   headingId="operation-chat_stream+request+inclusions+chatrestrictionfilters+containerspecs"
   parentId="inclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+containerspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4093,20 +4007,6 @@ Specifications for containers that should be used as part of the restriction (in
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="containerSpecs"
-  triggerText="View containerSpecs details"
->
-
-<Embedcontainerspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -4134,7 +4034,7 @@ Specifications for containers that should be used as part of the restriction (in
   id="inclusions_ChatRestrictionFilters_documentSpecs"
   headingId="operation-chat_stream+request+inclusions+chatrestrictionfilters+documentspecs"
   parentId="inclusions_ChatRestrictionFilters"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-chat_stream+request+inclusions+chatrestrictionfilters+documentspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4151,20 +4051,6 @@ Specifications for containers that should be used as part of the restriction (in
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="documentSpecs"
-  triggerText="View documentSpecs details"
->
-
-<Embeddocumentspecs />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
