--- a/examples/docusaurus/glean/docs/api/endpoint/client/collections.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/collections.mdx
@@ -50,12 +50,10 @@ import Embedthumbnail from "../../../../src/components/speakeasy-embeds/loaders/
 import Embedupdatedby from "../../../../src/components/speakeasy-embeds/loaders/updatedby.tsx";
 import Embedgroup from "../../../../src/components/speakeasy-embeds/loaders/group.tsx";
 import Embedperson from "../../../../src/components/speakeasy-embeds/loaders/person.tsx";
-import Embedsourcedocumentspec from "../../../../src/components/speakeasy-embeds/loaders/sourcedocumentspec.tsx";
 import Embedvalues from "../../../../src/components/speakeasy-embeds/loaders/values.tsx";
-import Embedcollection from "../../../../src/components/speakeasy-embeds/loaders/collection.tsx";
-import Embedcollectionerror from "../../../../src/components/speakeasy-embeds/loaders/collectionerror.tsx";
 import Embedmetadata from "../../../../src/components/speakeasy-embeds/loaders/metadata.tsx";
 import Embedrelateddocuments from "../../../../src/components/speakeasy-embeds/loaders/relateddocuments.tsx";
+import Embedcollection from "../../../../src/components/speakeasy-embeds/loaders/collection.tsx";
 import Embedcreatedby from "../../../../src/components/speakeasy-embeds/loaders/createdby.tsx";
 import Embeddocument from "../../../../src/components/speakeasy-embeds/loaders/document.tsx";
 import Embedshortcut from "../../../../src/components/speakeasy-embeds/loaders/shortcut.tsx";
@@ -1326,9 +1324,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-createcollection+request+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -1337,20 +1335,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-createcollection+request+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -1807,9 +1791,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-createcollection+request+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -1818,20 +1802,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-createcollection+request+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -1965,7 +1935,7 @@ Thumbnail URL. This can be user provided image and/or from downloaded images hos
 <OperationResponseBodyDisplayTypeSection slot="response-body-display-type">
 
 <FrontMatterDisplayType
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-createcollection+responses+200+application-json\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-createcollection+responses+200+application-json\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
 />
 
 </OperationResponseBodyDisplayTypeSection>
@@ -1977,128 +1947,6 @@ OK
 </OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
-
-<ExpandableBreakout
-  slot="entry"
-  id=""
-  headingId="operation-createcollection+responses+200+application-json+"
-  hasExpandableContent={true}
-  expandByDefault={true}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-createcollection+responses+200+application-json+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="_collection"
-  headingId="operation-createcollection+responses+200+application-json++collection"
-  typeInfo={{"label":"Collection","linkedLabel":"<a href=\"#operation-createcollection+responses+200+application-json++collection+collection\">Collection</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### collection \{#operation-createcollection+responses+200+application-json++collection\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="_collection_Collection"
-  headingId="operation-createcollection+responses+200+application-json++collection+collection"
-  parentId="_collection"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### Collection \{#operation-createcollection+responses+200+application-json++collection+collection\}
-
-</ExpandableBreakoutTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger slot="trigger" embedTitle="Collection" triggerText="View Collection details">
-
-<Embedcollection />
-
-</EmbedTrigger>
-
-</Embed>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="_error"
-  headingId="operation-createcollection+responses+200+application-json++error"
-  typeInfo={{"label":"CollectionError","linkedLabel":"<a href=\"#operation-createcollection+responses+200+application-json++error+collectionerror\">CollectionError</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### error \{#operation-createcollection+responses+200+application-json++error\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="_error_CollectionError"
-  headingId="operation-createcollection+responses+200+application-json++error+collectionerror"
-  parentId="_error"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### CollectionError \{#operation-createcollection+responses+200+application-json++error+collectionerror\}
-
-</ExpandableBreakoutTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="CollectionError"
-  triggerText="View CollectionError details"
->
-
-<Embedcollectionerror />
-
-</EmbedTrigger>
-
-</Embed>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandableSection>
 
@@ -3506,9 +3354,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editcollection+request+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -3517,20 +3365,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editcollection+request+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -3987,9 +3821,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editcollection+request+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -3998,20 +3832,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editcollection+request+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -4279,9 +4099,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editcollection+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -4290,20 +4110,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editcollection+responses+200+application-json+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -7009,9 +6815,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editcollection+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -7020,20 +6826,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editcollection+responses+200+application-json+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -7174,9 +6966,9 @@ A user's role with respect to a specific document.
   id="roles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-editcollection+responses+200+application-json+roles+userrolespecification+sourcedocumentspec"
   parentId="roles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-editcollection+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -7185,20 +6977,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-editcollection+responses+200+application-json+roles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
