--- a/examples/docusaurus/glean/docs/api/endpoint/client/documents.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/documents.mdx
@@ -230,7 +230,7 @@ Information about documents requested.
   slot="entry"
   id="documentSpecs"
   headingId="operation-getdocuments+request+documentspecs"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-getdocuments+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-getdocuments+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-getdocuments+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-getdocuments+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -247,106 +247,6 @@ Information about documents requested.
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="documentSpecs_"
-  headingId="operation-getdocuments+request+documentspecs+"
-  parentId="documentSpecs"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-getdocuments+request+documentspecs+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="documentSpecs__docType"
-  headingId="operation-getdocuments+request+documentspecs++doctype"
-  parentId="documentSpecs_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### docType \{#operation-getdocuments+request+documentspecs++doctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The specific type of the user generated content type.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="documentSpecs__ugcId"
-  headingId="operation-getdocuments+request+documentspecs++ugcid"
-  parentId="documentSpecs_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcId \{#operation-getdocuments+request+documentspecs++ugcid\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The string id for user generated content. Used for CHATS.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="documentSpecs__ugcType"
-  headingId="operation-getdocuments+request+documentspecs++ugctype"
-  parentId="documentSpecs_"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CHATS\"","linkedLabel":"\"CHATS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcType \{#operation-getdocuments+request+documentspecs++ugctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The type of the user generated content (UGC datasource).
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -412,7 +312,7 @@ OK
   slot="entry"
   id="documents"
   headingId="operation-getdocuments+responses+200+application-json+documents"
-  typeInfo={{"label":"map","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"Document","linkedLabel":"<a href=\"#operation-getdocuments+responses+200+application-json+documents+document\">Document</a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-getdocuments+responses+200+application-json+documents\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"map","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"Document","linkedLabel":"<a href=\"#operation-getdocuments+responses+200+application-json+documents+document\">Document</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -753,52 +653,6 @@ The title of the document.
 <ExpandablePropertyDescription slot="description">
 
 A permalink for the document.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-<ExpandableBreakout
-  slot="entry"
-  id="documents_"
-  headingId="operation-getdocuments+responses+200+application-json+documents+"
-  parentId="documents"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-getdocuments+responses+200+application-json+documents+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="documents__error"
-  headingId="operation-getdocuments+responses+200+application-json+documents++error"
-  parentId="documents_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### error \{#operation-getdocuments+responses+200+application-json+documents++error\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The text for error, reason.
 
 </ExpandablePropertyDescription>
 
@@ -1497,7 +1351,7 @@ Includes request params such as the query and specs of the documents to summariz
   slot="entry"
   id="documentSpecs"
   headingId="operation-summarize+request+documentspecs"
-  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-summarize+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-summarize+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-summarize+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-summarize+request+documentspecs\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1514,106 +1368,6 @@ Includes request params such as the query and specs of the documents to summariz
 Specifications for containers that should be used as part of the restriction (include/exclude). Memberships are recursively defined for a subset of datasources (currently: SharePoint, OneDrive, Google Drive, and Confluence). Please contact the Glean team to enable this for more datasources. Recursive memberships do not apply for Collections.
 
 </ExpandablePropertyDescription>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="documentSpecs_"
-  headingId="operation-summarize+request+documentspecs+"
-  parentId="documentSpecs"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-summarize+request+documentspecs+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="documentSpecs__docType"
-  headingId="operation-summarize+request+documentspecs++doctype"
-  parentId="documentSpecs_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### docType \{#operation-summarize+request+documentspecs++doctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The specific type of the user generated content type.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="documentSpecs__ugcId"
-  headingId="operation-summarize+request+documentspecs++ugcid"
-  parentId="documentSpecs_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcId \{#operation-summarize+request+documentspecs++ugcid\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The string id for user generated content. Used for CHATS.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="documentSpecs__ugcType"
-  headingId="operation-summarize+request+documentspecs++ugctype"
-  parentId="documentSpecs_"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CHATS\"","linkedLabel":"\"CHATS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcType \{#operation-summarize+request+documentspecs++ugctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The type of the user generated content (UGC datasource).
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
