--- a/examples/docusaurus/glean/docs/api/endpoint/client/entities.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/entities.mdx
@@ -2069,7 +2069,7 @@ List of PersonMetadata fields to return (that aren't returned by default)
   slot="entry"
   id="includeTypes"
   headingId="operation-people+request+includetypes"
-  typeInfo={{"label":"array","linkedLabel":"enum","children":[{"label":"enum","linkedLabel":"enum","children":[{"label":"\"BADGES\"","linkedLabel":"\"BADGES\"","children":[],"breakoutSubTypes":{}},{"label":"\"BUSY_EVENTS\"","linkedLabel":"\"BUSY_EVENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"DOCUMENT_ACTIVITY\"","linkedLabel":"\"DOCUMENT_ACTIVITY\"","children":[],"breakoutSubTypes":{}},{"label":"\"INVITE_INFO\"","linkedLabel":"\"INVITE_INFO\"","children":[],"breakoutSubTypes":{}},{"label":"\"PEOPLE_DISTANCE\"","linkedLabel":"\"PEOPLE_DISTANCE\"","children":[],"breakoutSubTypes":{}},{"label":"\"PERMISSIONS\"","linkedLabel":"\"PERMISSIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"PEOPLE_DETAILS\"","linkedLabel":"\"PEOPLE_DETAILS\"","children":[],"breakoutSubTypes":{}},{"label":"\"MANAGEMENT_DETAILS\"","linkedLabel":"\"MANAGEMENT_DETAILS\"","children":[],"breakoutSubTypes":{}},{"label":"\"PEOPLE_PROFILE_SETTINGS\"","linkedLabel":"\"PEOPLE_PROFILE_SETTINGS\"","children":[],"breakoutSubTypes":{}},{"label":"\"PEOPLE_WITHOUT_MANAGER\"","linkedLabel":"\"PEOPLE_WITHOUT_MANAGER\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"enum","children":[{"label":"enum","linkedLabel":"enum","children":[{"label":"\"PEOPLE_WITHOUT_MANAGER\"","linkedLabel":"\"PEOPLE_WITHOUT_MANAGER\"","children":[],"breakoutSubTypes":{}},{"label":"\"INVALID_ENTITIES\"","linkedLabel":"\"INVALID_ENTITIES\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -2083,7 +2083,7 @@ List of PersonMetadata fields to return (that aren't returned by default)
 
 <ExpandablePropertyDescription slot="description">
 
-List of PersonMetadata fields to return (that aren't returned by default)
+The types of people entities to include in the response in addition to those returned by default.
 
 </ExpandablePropertyDescription>
 
