--- a/examples/docusaurus/glean/docs/api/endpoint/client/insights.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/insights.mdx
@@ -239,7 +239,7 @@ IDs of the AI Apps for which Insights should be returned. An empty array signifi
   slot="entry"
   id="assistantActivityTypes"
   headingId="operation-insights+request+assistantactivitytypes"
-  typeInfo={{"label":"array","linkedLabel":"enum","children":[{"label":"enum","linkedLabel":"enum","children":[{"label":"\"AGENTS\"","linkedLabel":"\"AGENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"AI\"","linkedLabel":"\"AI\"","children":[],"breakoutSubTypes":{}},{"label":"\"AI_APPS\"","linkedLabel":"\"AI_APPS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CONTENT\"","linkedLabel":"\"CONTENT\"","children":[],"breakoutSubTypes":{}},{"label":"\"GLEAN_ASSIST\"","linkedLabel":"\"GLEAN_ASSIST\"","children":[],"breakoutSubTypes":{}},{"label":"\"QUERIES\"","linkedLabel":"\"QUERIES\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"USERS\"","linkedLabel":"\"USERS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"enum","children":[{"label":"enum","linkedLabel":"enum","children":[{"label":"\"GLEAN_CHAT\"","linkedLabel":"\"GLEAN_CHAT\"","children":[],"breakoutSubTypes":{}},{"label":"\"AI_SUMMARY\"","linkedLabel":"\"AI_SUMMARY\"","children":[],"breakoutSubTypes":{}},{"label":"\"AI_ANSWER\"","linkedLabel":"\"AI_ANSWER\"","children":[],"breakoutSubTypes":{}},{"label":"\"GLEANBOT_RESPONSE\"","linkedLabel":"\"GLEANBOT_RESPONSE\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -253,7 +253,7 @@ IDs of the AI Apps for which Insights should be returned. An empty array signifi
 
 <ExpandablePropertyDescription slot="description">
 
-Categories of data requested. Request can include single or multiple types.
+Types of activity that should count in the definition of an Assistant Active User. Affects only insights for AI category.
 
 </ExpandablePropertyDescription>
 
