--- a/examples/docusaurus/glean/docs/api/endpoint/client/search.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/search.mdx
@@ -7276,9 +7276,9 @@ _Example:_
   slot="entry"
   id="recommendationDocumentSpec"
   headingId="operation-recommendations+request+recommendationdocumentspec"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-recommendations+request+recommendationdocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-recommendations+request+recommendationdocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-recommendations+request+recommendationdocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-recommendations+request+recommendationdocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={true}
 >
 
@@ -7287,106 +7287,6 @@ _Example:_
 ##### recommendationDocumentSpec \{#operation-recommendations+request+recommendationdocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="recommendationDocumentSpec_"
-  headingId="operation-recommendations+request+recommendationdocumentspec+"
-  parentId="recommendationDocumentSpec"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-recommendations+request+recommendationdocumentspec+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="recommendationDocumentSpec__docType"
-  headingId="operation-recommendations+request+recommendationdocumentspec++doctype"
-  parentId="recommendationDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### docType \{#operation-recommendations+request+recommendationdocumentspec++doctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The specific type of the user generated content type.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="recommendationDocumentSpec__ugcId"
-  headingId="operation-recommendations+request+recommendationdocumentspec++ugcid"
-  parentId="recommendationDocumentSpec_"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcId \{#operation-recommendations+request+recommendationdocumentspec++ugcid\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The string id for user generated content. Used for CHATS.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="recommendationDocumentSpec__ugcType"
-  headingId="operation-recommendations+request+recommendationdocumentspec++ugctype"
-  parentId="recommendationDocumentSpec_"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ANNOUNCEMENTS\"","linkedLabel":"\"ANNOUNCEMENTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"ANSWERS\"","linkedLabel":"\"ANSWERS\"","children":[],"breakoutSubTypes":{}},{"label":"\"COLLECTIONS\"","linkedLabel":"\"COLLECTIONS\"","children":[],"breakoutSubTypes":{}},{"label":"\"SHORTCUTS\"","linkedLabel":"\"SHORTCUTS\"","children":[],"breakoutSubTypes":{}},{"label":"\"CHATS\"","linkedLabel":"\"CHATS\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### ugcType \{#operation-recommendations+request+recommendationdocumentspec++ugctype\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The type of the user generated content (UGC datasource).
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
