--- a/examples/docusaurus/glean/docs/api/endpoint/client/shortcuts.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/shortcuts.mdx
@@ -48,7 +48,6 @@ import Embedvalues from "../../../../src/components/speakeasy-embeds/loaders/val
 import Embedbuckets from "../../../../src/components/speakeasy-embeds/loaders/buckets.tsx";
 import Embedgroup from "../../../../src/components/speakeasy-embeds/loaders/group.tsx";
 import Embedperson from "../../../../src/components/speakeasy-embeds/loaders/person.tsx";
-import Embedsourcedocumentspec from "../../../../src/components/speakeasy-embeds/loaders/sourcedocumentspec.tsx";
 
 <EmbedProvider />
 
@@ -1231,7 +1230,7 @@ Read a particular shortcut's details given its ID.
 <OperationRequestBodyDisplayTypeSection slot="request-body-display-type">
 
 <FrontMatterDisplayType
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"UserGeneratedContentId","linkedLabel":"<a href=\"#operation-getshortcut+request+usergeneratedcontentid\">UserGeneratedContentId</a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-getshortcut+request\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"UserGeneratedContentId","linkedLabel":"<a href=\"#operation-getshortcut+usergeneratedcontentid\">UserGeneratedContentId</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
 />
 
 </OperationRequestBodyDisplayTypeSection>
@@ -1280,50 +1279,6 @@ GetShortcut request
 <ExpandablePropertyDescription slot="description">
 
 The opaque id of the user generated content.
-
-</ExpandablePropertyDescription>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
-
-<ExpandableBreakout
-  slot="entry"
-  id=""
-  headingId="operation-getshortcut+request+"
-  hasExpandableContent={true}
-  expandByDefault={true}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-####  \{#operation-getshortcut+request+\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="_alias"
-  headingId="operation-getshortcut+request++alias"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### alias \{#operation-getshortcut+request++alias\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The alias for the shortcut, including any arguments for variable shortcuts.
 
 </ExpandablePropertyDescription>
 
@@ -3645,9 +3600,9 @@ A user's role with respect to a specific document.
   id="addedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-updateshortcut+request+addedroles+userrolespecification+sourcedocumentspec"
   parentId="addedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+addedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -3656,20 +3611,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-updateshortcut+request+addedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
@@ -3930,9 +3871,9 @@ A user's role with respect to a specific document.
   id="removedRoles_UserRoleSpecification_sourceDocumentSpec"
   headingId="operation-updateshortcut+request+removedroles+userrolespecification+sourcedocumentspec"
   parentId="removedRoles_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#operation-updateshortcut+request+removedroles+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -3941,20 +3882,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#operation-updateshortcut+request+removedroles+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
