--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/datasource.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/datasource.mdx
@@ -6,12 +6,6 @@ sidebar_label: Indexing Datasource
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  Embed,
-  EmbedProvider,
-  EmbedTrigger,
-  ExpandableBreakout,
-  ExpandableBreakoutProperties,
-  ExpandableBreakoutTitle,
   ExpandableProperty,
   ExpandablePropertyBreakouts,
   ExpandablePropertyDescription,
@@ -34,11 +28,6 @@ import {
   Tag,
   TagTitle
 } from "@speakeasy-api/docs-md-react";
-import Embedbulkuploadhistory from "../../../../src/components/speakeasy-embeds/loaders/bulkuploadhistory.tsx";
-import Embedcounts from "../../../../src/components/speakeasy-embeds/loaders/counts.tsx";
-import Embedprocessinghistory from "../../../../src/components/speakeasy-embeds/loaders/processinghistory.tsx";
-
-<EmbedProvider />
 
 <Tag slot="tag">
 
@@ -216,7 +205,7 @@ ENABLED_FOR_ALL
   slot="entry"
   id="identity"
   headingId="operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity"
-  typeInfo={{"label":"documents","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents\">documents</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"identity","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+identity\">identity</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -229,134 +218,6 @@ ENABLED_FOR_ALL
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="identity_documents"
-  headingId="operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents"
-  parentId="identity"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### documents \{#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="identity_documents_bulkUploadHistory"
-  headingId="operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+bulkuploadhistory"
-  parentId="identity_documents"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+bulkuploadhistory+bulkuploadhistoryevent\">BulkUploadHistoryEvent</a>","children":[{"label":"BulkUploadHistoryEvent","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+bulkuploadhistory+bulkuploadhistoryevent\">BulkUploadHistoryEvent</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### bulkUploadHistory \{#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+bulkuploadhistory\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-Information about active and recent successful uploads for the datasource
-
-</ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="bulkUploadHistory"
-  triggerText="View bulkUploadHistory details"
->
-
-<Embedbulkuploadhistory />
-
-</EmbedTrigger>
-
-</Embed>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="identity_documents_counts"
-  headingId="operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+counts"
-  parentId="identity_documents"
-  typeInfo={{"label":"counts","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+counts+counts\">counts</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### counts \{#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+counts\}
-
-</ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger slot="trigger" embedTitle="counts" triggerText="View counts details">
-
-<Embedcounts />
-
-</EmbedTrigger>
-
-</Embed>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="identity_documents_processingHistory"
-  headingId="operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+processinghistory"
-  parentId="identity_documents"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+processinghistory+processinghistoryevent\">ProcessingHistoryEvent</a>","children":[{"label":"ProcessingHistoryEvent","linkedLabel":"<a href=\"#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+processinghistory+processinghistoryevent\">ProcessingHistoryEvent</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### processingHistory \{#operation-post_api_index_v1_debug_datasource_status+responses+200+application-json; charset=utf-8+identity+documents+processinghistory\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-Information about processing history for the datasource
-
-</ExpandablePropertyDescription>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="processingHistory"
-  triggerText="View processingHistory details"
->
-
-<Embedprocessinghistory />
-
-</EmbedTrigger>
-
-</Embed>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
