--- a/examples/docusaurus/glean/src/components/speakeasy-embeds/contents/userrolespecification.mdx
+++ b/examples/docusaurus/glean/src/components/speakeasy-embeds/contents/userrolespecification.mdx
@@ -14,7 +14,6 @@ import {
 } from "@speakeasy-api/docs-md-react";
 import Embedgroup from "../loaders/group.tsx";
 import Embedperson from "../loaders/person.tsx";
-import Embedsourcedocumentspec from "../loaders/sourcedocumentspec.tsx";
 
 <ExpandableSection>
 
@@ -123,9 +122,9 @@ A user's role with respect to a specific document.
   id="userrolespecification_UserRoleSpecification_sourceDocumentSpec"
   headingId="embed-userrolespecification+userrolespecification+userrolespecification+sourcedocumentspec"
   parentId="userrolespecification_UserRoleSpecification"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"","linkedLabel":"<a href=\"#embed-userrolespecification+userrolespecification+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#embed-userrolespecification+userrolespecification+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#embed-userrolespecification+userrolespecification+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}},{"label":"","linkedLabel":"<a href=\"#embed-userrolespecification+userrolespecification+userrolespecification+sourcedocumentspec\"></a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={true}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -134,20 +133,6 @@ A user's role with respect to a specific document.
 ##### sourceDocumentSpec \{#embed-userrolespecification+userrolespecification+userrolespecification+sourcedocumentspec\}
 
 </ExpandablePropertyTitle>
-
-<Embed slot="embed">
-
-<EmbedTrigger
-  slot="trigger"
-  embedTitle="sourceDocumentSpec"
-  triggerText="View sourceDocumentSpec details"
->
-
-<Embedsourcedocumentspec />
-
-</EmbedTrigger>
-
-</Embed>
 
 </ExpandableProperty>
 
