--- a/examples/docusaurus/pokeapi/docs/api/endpoint/games.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/games.mdx
@@ -2314,7 +2314,7 @@ _Example:_
   slot="entry"
   id="version_groups"
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry\">pokemon_entry</a>","children":[{"label":"pokemon_entry","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry\">pokemon_entry</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group\">version_group</a>","children":[{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -2330,8 +2330,8 @@ _Example:_
 
 <ExpandableBreakout
   slot="entry"
-  id="version_groups_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry"
+  id="version_groups_version_group"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group"
   parentId="version_groups"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2339,7 +2339,7 @@ _Example:_
 
 <ExpandableBreakoutTitle slot="title">
 
-#### pokemon\_entry \{#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry\}
+#### version\_group \{#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group\}
 
 </ExpandableBreakoutTitle>
 
@@ -2347,10 +2347,10 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_pokemon_entry_entry_number"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry+entry_number"
-  parentId="version_groups_pokemon_entry"
-  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
+  id="version_groups_version_group_name"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group+name"
+  parentId="version_groups_version_group"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2358,7 +2358,7 @@ _Example:_
 
 <ExpandablePropertyTitle slot="title">
 
-##### entry_number \{#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry+entry_number\}
+##### name \{#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group+name\}
 
 </ExpandablePropertyTitle>
 
@@ -2367,7 +2367,7 @@ _Example:_
 _Example:_
 
 ```
-1
+the-teal-mask
 ```
 
 </ExpandablePropertyExamples>
@@ -2376,10 +2376,10 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_pokemon_entry_pokemon_species"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry+pokemon_species"
-  parentId="version_groups_pokemon_entry"
-  typeInfo={{"label":"pokemon_species","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry+pokemon_species+pokemon_species\">pokemon_species</a>","children":[],"breakoutSubTypes":{}}}
+  id="version_groups_version_group_url"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group+url"
+  parentId="version_groups_version_group"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2387,13 +2387,19 @@ _Example:_
 
 <ExpandablePropertyTitle slot="title">
 
-##### pokemon_species \{#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry+pokemon_species\}
+##### url \{#operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+version_group+url\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyBreakouts slot="breakouts">
+<ExpandablePropertyExamples slot="examples">
 
-</ExpandablePropertyBreakouts>
+_Example:_
+
+```
+https://pokeapi.co/api/v2/version-group/26/
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -4003,7 +4009,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   slot="entry"
   id="pokedexes"
   headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex\">pokedex</a>","children":[{"label":"pokedex","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex\">pokedex</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -4019,8 +4025,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokedexes_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method"
+  id="pokedexes_pokedex"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex"
   parentId="pokedexes"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4028,7 +4034,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### move\_learn\_method \{#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method\}
+#### pokedex \{#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex\}
 
 </ExpandableBreakoutTitle>
 
@@ -4036,9 +4042,9 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableProperty
   slot="entry"
-  id="pokedexes_move_learn_method_name"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method+name"
-  parentId="pokedexes_move_learn_method"
+  id="pokedexes_pokedex_name"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex+name"
+  parentId="pokedexes_pokedex"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4047,7 +4053,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method+name\}
+##### name \{#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex+name\}
 
 </ExpandablePropertyTitle>
 
@@ -4056,7 +4062,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 _Example:_
 
 ```
-level-up
+kanto
 ```
 
 </ExpandablePropertyExamples>
@@ -4065,9 +4071,9 @@ level-up
 
 <ExpandableProperty
   slot="entry"
-  id="pokedexes_move_learn_method_url"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method+url"
-  parentId="pokedexes_move_learn_method"
+  id="pokedexes_pokedex_url"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex+url"
+  parentId="pokedexes_pokedex"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4076,7 +4082,7 @@ level-up
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method+url\}
+##### url \{#operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+pokedex+url\}
 
 </ExpandablePropertyTitle>
 
@@ -4085,7 +4091,7 @@ level-up
 _Example:_
 
 ```
-https://pokeapi.co/api/v2/move-learn-method/1/
+https://pokeapi.co/api/v2/pokedex/2/
 ```
 
 </ExpandablePropertyExamples>
@@ -4104,7 +4110,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   slot="entry"
   id="regions"
   headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region\">region</a>","children":[{"label":"region","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region\">region</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -4120,8 +4126,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="regions_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method"
+  id="regions_region"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region"
   parentId="regions"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4129,7 +4135,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### move\_learn\_method \{#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method\}
+#### region \{#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region\}
 
 </ExpandableBreakoutTitle>
 
@@ -4137,9 +4143,9 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableProperty
   slot="entry"
-  id="regions_move_learn_method_name"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method+name"
-  parentId="regions_move_learn_method"
+  id="regions_region_name"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region+name"
+  parentId="regions_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4148,7 +4154,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method+name\}
+##### name \{#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region+name\}
 
 </ExpandablePropertyTitle>
 
@@ -4157,7 +4163,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 _Example:_
 
 ```
-level-up
+kanto
 ```
 
 </ExpandablePropertyExamples>
@@ -4166,9 +4172,9 @@ level-up
 
 <ExpandableProperty
   slot="entry"
-  id="regions_move_learn_method_url"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method+url"
-  parentId="regions_move_learn_method"
+  id="regions_region_url"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region+url"
+  parentId="regions_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4177,7 +4183,7 @@ level-up
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method+url\}
+##### url \{#operation-api_v2_version_group_retrieve+responses+200+application-json+regions+region+url\}
 
 </ExpandablePropertyTitle>
 
@@ -4186,7 +4192,7 @@ level-up
 _Example:_
 
 ```
-https://pokeapi.co/api/v2/move-learn-method/1/
+https://pokeapi.co/api/v2/region/1/
 ```
 
 </ExpandablePropertyExamples>
