--- a/examples/docusaurus/pokeapi/docs/api/endpoint/items.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/items.mdx
@@ -681,7 +681,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="baby_trigger_for"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for"
-  typeInfo={{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"baby_trigger_for","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+baby_trigger_for\">baby_trigger_for</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -694,85 +694,6 @@ https://pokeapi.co/api/v2/item-attribute/1/
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="baby_trigger_for_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute"
-  parentId="baby_trigger_for"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### attribute \{#operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="baby_trigger_for_attribute_name"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute+name"
-  parentId="baby_trigger_for_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### name \{#operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute+name\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="baby_trigger_for_attribute_url"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute+url"
-  parentId="baby_trigger_for_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url \{#operation-api_v2_item_retrieve+responses+200+application-json+baby_trigger_for+attribute+url\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
@@ -1513,7 +1434,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="held_by_pokemon"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute\">attribute</a>","children":[{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+held_by_pokemon\">held_by_pokemon</a>","children":[{"label":"held_by_pokemon","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+held_by_pokemon\">held_by_pokemon</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1526,85 +1447,6 @@ https://pokeapi.co/api/v2/item-attribute/1/
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="held_by_pokemon_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute"
-  parentId="held_by_pokemon"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### attribute \{#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="held_by_pokemon_attribute_name"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute+name"
-  parentId="held_by_pokemon_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### name \{#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute+name\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="held_by_pokemon_attribute_url"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute+url"
-  parentId="held_by_pokemon_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url \{#operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute+url\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
@@ -1632,7 +1474,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="machines"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute\">attribute</a>","children":[{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+machines+machine\">machine</a>","children":[{"label":"machine","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+machines+machine\">machine</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1648,8 +1490,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="machines_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute"
+  id="machines_machine"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+machine"
   parentId="machines"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1657,7 +1499,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### attribute \{#operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute\}
+#### machine \{#operation-api_v2_item_retrieve+responses+200+application-json+machines+machine\}
 
 </ExpandableBreakoutTitle>
 
@@ -1665,10 +1507,10 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandableProperty
   slot="entry"
-  id="machines_attribute_name"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute+name"
-  parentId="machines_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="machines_machine_version_group"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+machine+version_group"
+  parentId="machines_machine"
+  typeInfo={{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+machines+machine+version_group+version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1676,48 +1518,13 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute+name\}
+##### version_group \{#operation-api_v2_item_retrieve+responses+200+application-json+machines+machine+version_group\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyExamples slot="examples">
+<ExpandablePropertyBreakouts slot="breakouts">
 
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="machines_attribute_url"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute+url"
-  parentId="machines_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url \{#operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute+url\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
+</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -1895,7 +1702,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="sprites"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+sprites"
-  typeInfo={{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"sprites","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve+responses+200+application-json+sprites+sprites\">sprites</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1908,85 +1715,6 @@ https://pokeapi.co/api/v2/item-attribute/1/
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="sprites_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute"
-  parentId="sprites"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### attribute \{#operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute\}
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="sprites_attribute_name"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute+name"
-  parentId="sprites_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### name \{#operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute+name\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sprites_attribute_url"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute+url"
-  parentId="sprites_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url \{#operation-api_v2_item_retrieve+responses+200+application-json+sprites+attribute+url\}
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
