--- a/examples/docusaurus/pokeapi/docs/api/endpoint/location.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/location.mdx
@@ -1648,7 +1648,7 @@ A unique integer value identifying this location area.
   id="encounter_method_rates_encounter_method_rate_version_details"
   headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details"
   parentId="encounter_method_rates_encounter_method_rate"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method\">encounter_method</a>","children":[{"label":"encounter_method","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method\">encounter_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail\">version_detail</a>","children":[{"label":"version_detail","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail\">version_detail</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1664,8 +1664,8 @@ A unique integer value identifying this location area.
 
 <ExpandableBreakout
   slot="entry"
-  id="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method"
+  id="encounter_method_rates_encounter_method_rate_version_details_version_detail"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail"
   parentId="encounter_method_rates_encounter_method_rate_version_details"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1673,7 +1673,7 @@ A unique integer value identifying this location area.
 
 <ExpandableBreakoutTitle slot="title">
 
-#### encounter\_method \{#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method\}
+#### version\_detail \{#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail\}
 
 </ExpandableBreakoutTitle>
 
@@ -1681,10 +1681,10 @@ A unique integer value identifying this location area.
 
 <ExpandableProperty
   slot="entry"
-  id="encounter_method_rates_encounter_method_rate_version_details_encounter_method_name"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method+name"
-  parentId="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="encounter_method_rates_encounter_method_rate_version_details_version_detail_rate"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail+rate"
+  parentId="encounter_method_rates_encounter_method_rate_version_details_version_detail"
+  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1692,7 +1692,7 @@ A unique integer value identifying this location area.
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method+name\}
+##### rate \{#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail+rate\}
 
 </ExpandablePropertyTitle>
 
@@ -1701,7 +1701,7 @@ A unique integer value identifying this location area.
 _Example:_
 
 ```
-old-rod
+5
 ```
 
 </ExpandablePropertyExamples>
@@ -1710,10 +1710,10 @@ old-rod
 
 <ExpandableProperty
   slot="entry"
-  id="encounter_method_rates_encounter_method_rate_version_details_encounter_method_url"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method+url"
-  parentId="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="encounter_method_rates_encounter_method_rate_version_details_version_detail_version"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail+version"
+  parentId="encounter_method_rates_encounter_method_rate_version_details_version_detail"
+  typeInfo={{"label":"version","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail+version+version\">version</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1721,19 +1721,13 @@ old-rod
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method+url\}
+##### version \{#operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+version_detail+version\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyExamples slot="examples">
+<ExpandablePropertyBreakouts slot="breakouts">
 
-_Example:_
-
-```
-https://pokeapi.co/api/v2/encounter-method/2/
-```
-
-</ExpandablePropertyExamples>
+</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -2036,7 +2030,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   slot="entry"
   id="pokemon_encounters"
   headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate\">encounter_method_rate</a>","children":[{"label":"encounter_method_rate","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate\">encounter_method_rate</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter\">pokemon_encounter</a>","children":[{"label":"pokemon_encounter","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter\">pokemon_encounter</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -2052,8 +2046,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate"
+  id="pokemon_encounters_pokemon_encounter"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter"
   parentId="pokemon_encounters"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2061,7 +2055,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### encounter\_method\_rate \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate\}
+#### pokemon\_encounter \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter\}
 
 </ExpandableBreakoutTitle>
 
@@ -2069,10 +2063,10 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+encounter_method"
-  parentId="pokemon_encounters_encounter_method_rate"
-  typeInfo={{"label":"encounter_method","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+encounter_method+encounter_method\">encounter_method</a>","children":[],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_pokemon"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+pokemon"
+  parentId="pokemon_encounters_pokemon_encounter"
+  typeInfo={{"label":"pokemon","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+pokemon+pokemon\">pokemon</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2080,7 +2074,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandablePropertyTitle slot="title">
 
-##### encounter_method \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+encounter_method\}
+##### pokemon \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+pokemon\}
 
 </ExpandablePropertyTitle>
 
@@ -2092,10 +2086,10 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details"
-  parentId="pokemon_encounters_encounter_method_rate"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method\">encounter_method</a>","children":[{"label":"encounter_method","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method\">encounter_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_version_details"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details"
+  parentId="pokemon_encounters_pokemon_encounter"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail\">version_detail</a>","children":[{"label":"version_detail","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail\">version_detail</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2103,7 +2097,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandablePropertyTitle slot="title">
 
-##### version_details \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details\}
+##### version_details \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details\}
 
 </ExpandablePropertyTitle>
 
@@ -2111,16 +2105,16 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method"
-  parentId="pokemon_encounters_encounter_method_rate_version_details"
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail"
+  parentId="pokemon_encounters_pokemon_encounter_version_details"
   hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandableBreakoutTitle slot="title">
 
-#### encounter\_method \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method\}
+#### version\_detail \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail\}
 
 </ExpandableBreakoutTitle>
 
@@ -2128,10 +2122,10 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details_encounter_method_name"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method+name"
-  parentId="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail_encounter_details"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+encounter_details"
+  parentId="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  typeInfo={{"label":"encounter_details","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+encounter_details+encounter_details\">encounter_details</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2139,7 +2133,30 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method+name\}
+##### encounter_details \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+encounter_details\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyBreakouts slot="breakouts">
+
+</ExpandablePropertyBreakouts>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail_max_chance"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+max_chance"
+  parentId="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### max_chance \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+max_chance\}
 
 </ExpandablePropertyTitle>
 
@@ -2148,7 +2165,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 _Example:_
 
 ```
-old-rod
+60
 ```
 
 </ExpandablePropertyExamples>
@@ -2157,10 +2174,10 @@ old-rod
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details_encounter_method_url"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method+url"
-  parentId="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail_version"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+version"
+  parentId="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  typeInfo={{"label":"version","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+version+version\">version</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2168,19 +2185,13 @@ old-rod
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method+url\}
+##### version \{#operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter+version_details+version_detail+version\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyExamples slot="examples">
+<ExpandablePropertyBreakouts slot="breakouts">
 
-_Example:_
-
-```
-https://pokeapi.co/api/v2/encounter-method/2/
-```
-
-</ExpandablePropertyExamples>
+</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -3955,7 +3966,7 @@ This parameter can be a string or an integer.
   slot="entry"
   id="version_groups"
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation\">main_generation</a>","children":[{"label":"main_generation","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation\">main_generation</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group\">version_group</a>","children":[{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -3971,8 +3982,8 @@ This parameter can be a string or an integer.
 
 <ExpandableBreakout
   slot="entry"
-  id="version_groups_main_generation"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation"
+  id="version_groups_version_group"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group"
   parentId="version_groups"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -3980,7 +3991,7 @@ This parameter can be a string or an integer.
 
 <ExpandableBreakoutTitle slot="title">
 
-#### main\_generation \{#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation\}
+#### version\_group \{#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group\}
 
 </ExpandableBreakoutTitle>
 
@@ -3988,39 +3999,59 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_main_generation_name"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation+name"
-  parentId="version_groups_main_generation"
+  id="version_groups_version_group_name"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group+name"
+  parentId="version_groups_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
-  hasExpandableContent={false}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation+name\}
+##### name \{#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group+name\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+red-blue
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_main_generation_url"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation+url"
-  parentId="version_groups_main_generation"
+  id="version_groups_version_group_url"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group+url"
+  parentId="version_groups_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation+url\}
+##### url \{#operation-api_v2_region_retrieve+responses+200+application-json+version_groups+version_group+url\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+https://pokeapi.co/api/v2/version-group/1/
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
