--- a/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -2313,7 +2313,7 @@ _Example:_
   slot="entry"
   id="version_groups"
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\">pokemon_entry</a>","children":[{"label":"pokemon_entry","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\">pokemon_entry</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group\">version_group</a>","children":[{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -2329,8 +2329,8 @@ _Example:_
 
 <ExpandableBreakout
   slot="entry"
-  id="version_groups_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry"
+  id="version_groups_version_group"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group"
   parentId="version_groups"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2338,7 +2338,7 @@ _Example:_
 
 <ExpandableBreakoutTitle slot="title">
 
-#### pokemon\_entry [#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry]
+#### version\_group [#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group]
 
 </ExpandableBreakoutTitle>
 
@@ -2346,10 +2346,10 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_pokemon_entry_entry_number"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_entry_number"
-  parentId="version_groups_pokemon_entry"
-  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
+  id="version_groups_version_group_name"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_name"
+  parentId="version_groups_version_group"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2357,7 +2357,7 @@ _Example:_
 
 <ExpandablePropertyTitle slot="title">
 
-##### entry_number [#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_entry_number]
+##### name [#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_name]
 
 </ExpandablePropertyTitle>
 
@@ -2366,7 +2366,7 @@ _Example:_
 _Example:_
 
 ```
-1
+the-teal-mask
 ```
 
 </ExpandablePropertyExamples>
@@ -2375,10 +2375,10 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_pokemon_entry_pokemon_species"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_pokemon_species"
-  parentId="version_groups_pokemon_entry"
-  typeInfo={{"label":"pokemon_species","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_pokemon_species_pokemon_species\">pokemon_species</a>","children":[],"breakoutSubTypes":{}}}
+  id="version_groups_version_group_url"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_url"
+  parentId="version_groups_version_group"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2386,13 +2386,19 @@ _Example:_
 
 <ExpandablePropertyTitle slot="title">
 
-##### pokemon_species [#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_pokemon_species]
+##### url [#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_url]
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyBreakouts slot="breakouts">
+<ExpandablePropertyExamples slot="examples">
 
-</ExpandablePropertyBreakouts>
+_Example:_
+
+```
+https://pokeapi.co/api/v2/version-group/26/
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -4002,7 +4008,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   slot="entry"
   id="pokedexes"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex\">pokedex</a>","children":[{"label":"pokedex","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex\">pokedex</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -4018,8 +4024,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokedexes_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method"
+  id="pokedexes_pokedex"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex"
   parentId="pokedexes"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4027,7 +4033,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### move\_learn\_method [#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method]
+#### pokedex [#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex]
 
 </ExpandableBreakoutTitle>
 
@@ -4035,9 +4041,9 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableProperty
   slot="entry"
-  id="pokedexes_move_learn_method_name"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_name"
-  parentId="pokedexes_move_learn_method"
+  id="pokedexes_pokedex_name"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_name"
+  parentId="pokedexes_pokedex"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4046,7 +4052,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name [#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_name]
+##### name [#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_name]
 
 </ExpandablePropertyTitle>
 
@@ -4055,7 +4061,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 _Example:_
 
 ```
-level-up
+kanto
 ```
 
 </ExpandablePropertyExamples>
@@ -4064,9 +4070,9 @@ level-up
 
 <ExpandableProperty
   slot="entry"
-  id="pokedexes_move_learn_method_url"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_url"
-  parentId="pokedexes_move_learn_method"
+  id="pokedexes_pokedex_url"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_url"
+  parentId="pokedexes_pokedex"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4075,7 +4081,7 @@ level-up
 
 <ExpandablePropertyTitle slot="title">
 
-##### url [#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_url]
+##### url [#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_url]
 
 </ExpandablePropertyTitle>
 
@@ -4084,7 +4090,7 @@ level-up
 _Example:_
 
 ```
-https://pokeapi.co/api/v2/move-learn-method/1/
+https://pokeapi.co/api/v2/pokedex/2/
 ```
 
 </ExpandablePropertyExamples>
@@ -4103,7 +4109,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   slot="entry"
   id="regions"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region\">region</a>","children":[{"label":"region","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region\">region</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -4119,8 +4125,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="regions_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method"
+  id="regions_region"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region"
   parentId="regions"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4128,7 +4134,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### move\_learn\_method [#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method]
+#### region [#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region]
 
 </ExpandableBreakoutTitle>
 
@@ -4136,9 +4142,9 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableProperty
   slot="entry"
-  id="regions_move_learn_method_name"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_name"
-  parentId="regions_move_learn_method"
+  id="regions_region_name"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_name"
+  parentId="regions_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4147,7 +4153,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name [#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_name]
+##### name [#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_name]
 
 </ExpandablePropertyTitle>
 
@@ -4156,7 +4162,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 _Example:_
 
 ```
-level-up
+kanto
 ```
 
 </ExpandablePropertyExamples>
@@ -4165,9 +4171,9 @@ level-up
 
 <ExpandableProperty
   slot="entry"
-  id="regions_move_learn_method_url"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_url"
-  parentId="regions_move_learn_method"
+  id="regions_region_url"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_url"
+  parentId="regions_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4176,7 +4182,7 @@ level-up
 
 <ExpandablePropertyTitle slot="title">
 
-##### url [#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_url]
+##### url [#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_url]
 
 </ExpandablePropertyTitle>
 
@@ -4185,7 +4191,7 @@ level-up
 _Example:_
 
 ```
-https://pokeapi.co/api/v2/move-learn-method/1/
+https://pokeapi.co/api/v2/region/1/
 ```
 
 </ExpandablePropertyExamples>
