--- a/examples/nextra/pokeapi/src/app/api/endpoint/items/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/items/page.mdx
@@ -680,7 +680,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="baby_trigger_for"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for"
-  typeInfo={{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"baby_trigger_for","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_baby_trigger_for\">baby_trigger_for</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -693,85 +693,6 @@ https://pokeapi.co/api/v2/item-attribute/1/
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="baby_trigger_for_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute"
-  parentId="baby_trigger_for"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### attribute [#operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute]
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="baby_trigger_for_attribute_name"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute_name"
-  parentId="baby_trigger_for_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### name [#operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute_name]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="baby_trigger_for_attribute_url"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute_url"
-  parentId="baby_trigger_for_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url [#operation-api_v2_item_retrieve_responses_200_application-json_baby_trigger_for_attribute_url]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
@@ -1512,7 +1433,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="held_by_pokemon"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute\">attribute</a>","children":[{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_held_by_pokemon\">held_by_pokemon</a>","children":[{"label":"held_by_pokemon","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_held_by_pokemon\">held_by_pokemon</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1525,85 +1446,6 @@ https://pokeapi.co/api/v2/item-attribute/1/
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="held_by_pokemon_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute"
-  parentId="held_by_pokemon"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### attribute [#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute]
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="held_by_pokemon_attribute_name"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute_name"
-  parentId="held_by_pokemon_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### name [#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute_name]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="held_by_pokemon_attribute_url"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute_url"
-  parentId="held_by_pokemon_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url [#operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute_url]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
@@ -1631,7 +1473,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="machines"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute\">attribute</a>","children":[{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_machines_machine\">machine</a>","children":[{"label":"machine","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_machines_machine\">machine</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1647,8 +1489,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="machines_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute"
+  id="machines_machine"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_machine"
   parentId="machines"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1656,7 +1498,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### attribute [#operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute]
+#### machine [#operation-api_v2_item_retrieve_responses_200_application-json_machines_machine]
 
 </ExpandableBreakoutTitle>
 
@@ -1664,10 +1506,10 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandableProperty
   slot="entry"
-  id="machines_attribute_name"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute_name"
-  parentId="machines_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="machines_machine_version_group"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_machine_version_group"
+  parentId="machines_machine"
+  typeInfo={{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_machines_machine_version_group_version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1675,48 +1517,13 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name [#operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute_name]
+##### version_group [#operation-api_v2_item_retrieve_responses_200_application-json_machines_machine_version_group]
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyExamples slot="examples">
+<ExpandablePropertyBreakouts slot="breakouts">
 
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="machines_attribute_url"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute_url"
-  parentId="machines_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url [#operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute_url]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
+</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -1894,7 +1701,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   slot="entry"
   id="sprites"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_sprites"
-  typeInfo={{"label":"attribute","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute\">attribute</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"sprites","linkedLabel":"<a href=\"#operation-api_v2_item_retrieve_responses_200_application-json_sprites_sprites\">sprites</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -1907,85 +1714,6 @@ https://pokeapi.co/api/v2/item-attribute/1/
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyBreakouts slot="breakouts">
-
-<ExpandableBreakout
-  slot="entry"
-  id="sprites_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute"
-  parentId="sprites"
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandableBreakoutTitle slot="title">
-
-#### attribute [#operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute]
-
-</ExpandableBreakoutTitle>
-
-<ExpandableBreakoutProperties slot="properties">
-
-<ExpandableProperty
-  slot="entry"
-  id="sprites_attribute_name"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute_name"
-  parentId="sprites_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### name [#operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute_name]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-countable
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-<ExpandableProperty
-  slot="entry"
-  id="sprites_attribute_url"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute_url"
-  parentId="sprites_attribute"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
-  expandByDefault={false}
->
-
-<ExpandablePropertyTitle slot="title">
-
-##### url [#operation-api_v2_item_retrieve_responses_200_application-json_sprites_attribute_url]
-
-</ExpandablePropertyTitle>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-https://pokeapi.co/api/v2/item-attribute/1/
-```
-
-</ExpandablePropertyExamples>
-
-</ExpandableProperty>
-
-</ExpandableBreakoutProperties>
-
-</ExpandableBreakout>
 
 </ExpandablePropertyBreakouts>
 
