--- a/examples/custom/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -2308,7 +2308,7 @@ _Example:_
   slot="entry"
   id="version_groups"
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\">pokemon_entry</a>","children":[{"label":"pokemon_entry","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\">pokemon_entry</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group\">version_group</a>","children":[{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -2324,8 +2324,8 @@ _Example:_
 
 <ExpandableBreakout
   slot="entry"
-  id="version_groups_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry"
+  id="version_groups_version_group"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group"
   parentId="version_groups"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2333,7 +2333,7 @@ _Example:_
 
 <ExpandableBreakoutTitle slot="title">
 
-#### pokemon\_entry \{#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\}
+#### version\_group \{#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group\}
 
 </ExpandableBreakoutTitle>
 
@@ -2341,10 +2341,10 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_pokemon_entry_entry_number"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_entry_number"
-  parentId="version_groups_pokemon_entry"
-  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
+  id="version_groups_version_group_name"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_name"
+  parentId="version_groups_version_group"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2352,7 +2352,7 @@ _Example:_
 
 <ExpandablePropertyTitle slot="title">
 
-##### entry_number \{#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_entry_number\}
+##### name \{#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_name\}
 
 </ExpandablePropertyTitle>
 
@@ -2361,7 +2361,7 @@ _Example:_
 _Example:_
 
 ```
-1
+the-teal-mask
 ```
 
 </ExpandablePropertyExamples>
@@ -2370,10 +2370,10 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_pokemon_entry_pokemon_species"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_pokemon_species"
-  parentId="version_groups_pokemon_entry"
-  typeInfo={{"label":"pokemon_species","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_pokemon_species_pokemon_species\">pokemon_species</a>","children":[],"breakoutSubTypes":{}}}
+  id="version_groups_version_group_url"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_url"
+  parentId="version_groups_version_group"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2381,13 +2381,19 @@ _Example:_
 
 <ExpandablePropertyTitle slot="title">
 
-##### pokemon_species \{#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry_pokemon_species\}
+##### url \{#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_version_group_url\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyBreakouts slot="breakouts">
+<ExpandablePropertyExamples slot="examples">
 
-</ExpandablePropertyBreakouts>
+_Example:_
+
+```
+https://pokeapi.co/api/v2/version-group/26/
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -3997,7 +4003,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   slot="entry"
   id="pokedexes"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex\">pokedex</a>","children":[{"label":"pokedex","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex\">pokedex</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -4013,8 +4019,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokedexes_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method"
+  id="pokedexes_pokedex"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex"
   parentId="pokedexes"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4022,7 +4028,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### move\_learn\_method \{#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\}
+#### pokedex \{#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex\}
 
 </ExpandableBreakoutTitle>
 
@@ -4030,9 +4036,9 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableProperty
   slot="entry"
-  id="pokedexes_move_learn_method_name"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_name"
-  parentId="pokedexes_move_learn_method"
+  id="pokedexes_pokedex_name"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_name"
+  parentId="pokedexes_pokedex"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4041,7 +4047,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_name\}
+##### name \{#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_name\}
 
 </ExpandablePropertyTitle>
 
@@ -4050,7 +4056,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 _Example:_
 
 ```
-level-up
+kanto
 ```
 
 </ExpandablePropertyExamples>
@@ -4059,9 +4065,9 @@ level-up
 
 <ExpandableProperty
   slot="entry"
-  id="pokedexes_move_learn_method_url"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_url"
-  parentId="pokedexes_move_learn_method"
+  id="pokedexes_pokedex_url"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_url"
+  parentId="pokedexes_pokedex"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4070,7 +4076,7 @@ level-up
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method_url\}
+##### url \{#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_pokedex_url\}
 
 </ExpandablePropertyTitle>
 
@@ -4079,7 +4085,7 @@ level-up
 _Example:_
 
 ```
-https://pokeapi.co/api/v2/move-learn-method/1/
+https://pokeapi.co/api/v2/pokedex/2/
 ```
 
 </ExpandablePropertyExamples>
@@ -4098,7 +4104,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   slot="entry"
   id="regions"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region\">region</a>","children":[{"label":"region","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region\">region</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -4114,8 +4120,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakout
   slot="entry"
-  id="regions_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method"
+  id="regions_region"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region"
   parentId="regions"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -4123,7 +4129,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### move\_learn\_method \{#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\}
+#### region \{#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region\}
 
 </ExpandableBreakoutTitle>
 
@@ -4131,9 +4137,9 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandableProperty
   slot="entry"
-  id="regions_move_learn_method_name"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_name"
-  parentId="regions_move_learn_method"
+  id="regions_region_name"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_name"
+  parentId="regions_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4142,7 +4148,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_name\}
+##### name \{#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_name\}
 
 </ExpandablePropertyTitle>
 
@@ -4151,7 +4157,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 _Example:_
 
 ```
-level-up
+kanto
 ```
 
 </ExpandablePropertyExamples>
@@ -4160,9 +4166,9 @@ level-up
 
 <ExpandableProperty
   slot="entry"
-  id="regions_move_learn_method_url"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_url"
-  parentId="regions_move_learn_method"
+  id="regions_region_url"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_url"
+  parentId="regions_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
@@ -4171,7 +4177,7 @@ level-up
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method_url\}
+##### url \{#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_region_url\}
 
 </ExpandablePropertyTitle>
 
@@ -4180,7 +4186,7 @@ level-up
 _Example:_
 
 ```
-https://pokeapi.co/api/v2/move-learn-method/1/
+https://pokeapi.co/api/v2/region/1/
 ```
 
 </ExpandablePropertyExamples>
