--- a/examples/custom/pokeapi/src/app/api/endpoint/location/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/location/page.mdx
@@ -1642,7 +1642,7 @@ A unique integer value identifying this location area.
   id="encounter_method_rates_encounter_method_rate_version_details"
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details"
   parentId="encounter_method_rates_encounter_method_rate"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method\">encounter_method</a>","children":[{"label":"encounter_method","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method\">encounter_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail\">version_detail</a>","children":[{"label":"version_detail","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail\">version_detail</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1658,8 +1658,8 @@ A unique integer value identifying this location area.
 
 <ExpandableBreakout
   slot="entry"
-  id="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method"
+  id="encounter_method_rates_encounter_method_rate_version_details_version_detail"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail"
   parentId="encounter_method_rates_encounter_method_rate_version_details"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1667,7 +1667,7 @@ A unique integer value identifying this location area.
 
 <ExpandableBreakoutTitle slot="title">
 
-#### encounter\_method \{#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method\}
+#### version\_detail \{#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail\}
 
 </ExpandableBreakoutTitle>
 
@@ -1675,10 +1675,10 @@ A unique integer value identifying this location area.
 
 <ExpandableProperty
   slot="entry"
-  id="encounter_method_rates_encounter_method_rate_version_details_encounter_method_name"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method_name"
-  parentId="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="encounter_method_rates_encounter_method_rate_version_details_version_detail_rate"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail_rate"
+  parentId="encounter_method_rates_encounter_method_rate_version_details_version_detail"
+  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1686,7 +1686,7 @@ A unique integer value identifying this location area.
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method_name\}
+##### rate \{#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail_rate\}
 
 </ExpandablePropertyTitle>
 
@@ -1695,7 +1695,7 @@ A unique integer value identifying this location area.
 _Example:_
 
 ```
-old-rod
+5
 ```
 
 </ExpandablePropertyExamples>
@@ -1704,10 +1704,10 @@ old-rod
 
 <ExpandableProperty
   slot="entry"
-  id="encounter_method_rates_encounter_method_rate_version_details_encounter_method_url"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method_url"
-  parentId="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="encounter_method_rates_encounter_method_rate_version_details_version_detail_version"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail_version"
+  parentId="encounter_method_rates_encounter_method_rate_version_details_version_detail"
+  typeInfo={{"label":"version","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail_version_version\">version</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -1715,19 +1715,13 @@ old-rod
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method_url\}
+##### version \{#operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_version_detail_version\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyExamples slot="examples">
+<ExpandablePropertyBreakouts slot="breakouts">
 
-_Example:_
-
-```
-https://pokeapi.co/api/v2/encounter-method/2/
-```
-
-</ExpandablePropertyExamples>
+</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -2030,7 +2024,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   slot="entry"
   id="pokemon_encounters"
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate\">encounter_method_rate</a>","children":[{"label":"encounter_method_rate","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate\">encounter_method_rate</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter\">pokemon_encounter</a>","children":[{"label":"pokemon_encounter","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter\">pokemon_encounter</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -2046,8 +2040,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate"
+  id="pokemon_encounters_pokemon_encounter"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter"
   parentId="pokemon_encounters"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2055,7 +2049,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableBreakoutTitle slot="title">
 
-#### encounter\_method\_rate \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate\}
+#### pokemon\_encounter \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter\}
 
 </ExpandableBreakoutTitle>
 
@@ -2063,10 +2057,10 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_encounter_method"
-  parentId="pokemon_encounters_encounter_method_rate"
-  typeInfo={{"label":"encounter_method","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_encounter_method_encounter_method\">encounter_method</a>","children":[],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_pokemon"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_pokemon"
+  parentId="pokemon_encounters_pokemon_encounter"
+  typeInfo={{"label":"pokemon","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_pokemon_pokemon\">pokemon</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2074,7 +2068,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandablePropertyTitle slot="title">
 
-##### encounter_method \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_encounter_method\}
+##### pokemon \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_pokemon\}
 
 </ExpandablePropertyTitle>
 
@@ -2086,10 +2080,10 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details"
-  parentId="pokemon_encounters_encounter_method_rate"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method\">encounter_method</a>","children":[{"label":"encounter_method","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method\">encounter_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_version_details"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details"
+  parentId="pokemon_encounters_pokemon_encounter"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail\">version_detail</a>","children":[{"label":"version_detail","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail\">version_detail</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2097,7 +2091,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandablePropertyTitle slot="title">
 
-##### version_details \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details\}
+##### version_details \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details\}
 
 </ExpandablePropertyTitle>
 
@@ -2105,16 +2099,16 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableBreakout
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  parentId="pokemon_encounters_encounter_method_rate_version_details"
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  parentId="pokemon_encounters_pokemon_encounter_version_details"
   hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandableBreakoutTitle slot="title">
 
-#### encounter\_method \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method\}
+#### version\_detail \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail\}
 
 </ExpandableBreakoutTitle>
 
@@ -2122,10 +2116,10 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details_encounter_method_name"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method_name"
-  parentId="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail_encounter_details"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_encounter_details"
+  parentId="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  typeInfo={{"label":"encounter_details","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_encounter_details_encounter_details\">encounter_details</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2133,7 +2127,30 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method_name\}
+##### encounter_details \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_encounter_details\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyBreakouts slot="breakouts">
+
+</ExpandablePropertyBreakouts>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail_max_chance"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_max_chance"
+  parentId="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  typeInfo={{"label":"int32","linkedLabel":"int32","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### max_chance \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_max_chance\}
 
 </ExpandablePropertyTitle>
 
@@ -2142,7 +2159,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
 _Example:_
 
 ```
-old-rod
+60
 ```
 
 </ExpandablePropertyExamples>
@@ -2151,10 +2168,10 @@ old-rod
 
 <ExpandableProperty
   slot="entry"
-  id="pokemon_encounters_encounter_method_rate_version_details_encounter_method_url"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method_url"
-  parentId="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  id="pokemon_encounters_pokemon_encounter_version_details_version_detail_version"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_version"
+  parentId="pokemon_encounters_pokemon_encounter_version_details_version_detail"
+  typeInfo={{"label":"version","linkedLabel":"<a href=\"#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_version_version\">version</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -2162,19 +2179,13 @@ old-rod
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method_url\}
+##### version \{#operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter_version_details_version_detail_version\}
 
 </ExpandablePropertyTitle>
 
-<ExpandablePropertyExamples slot="examples">
+<ExpandablePropertyBreakouts slot="breakouts">
 
-_Example:_
-
-```
-https://pokeapi.co/api/v2/encounter-method/2/
-```
-
-</ExpandablePropertyExamples>
+</ExpandablePropertyBreakouts>
 
 </ExpandableProperty>
 
@@ -3949,7 +3960,7 @@ This parameter can be a string or an integer.
   slot="entry"
   id="version_groups"
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation\">main_generation</a>","children":[{"label":"main_generation","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation\">main_generation</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group\">version_group</a>","children":[{"label":"version_group","linkedLabel":"<a href=\"#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group\">version_group</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -3965,8 +3976,8 @@ This parameter can be a string or an integer.
 
 <ExpandableBreakout
   slot="entry"
-  id="version_groups_main_generation"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation"
+  id="version_groups_version_group"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group"
   parentId="version_groups"
   hasExpandableContent={true}
   expandByDefault={false}
@@ -3974,7 +3985,7 @@ This parameter can be a string or an integer.
 
 <ExpandableBreakoutTitle slot="title">
 
-#### main\_generation \{#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation\}
+#### version\_group \{#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group\}
 
 </ExpandableBreakoutTitle>
 
@@ -3982,39 +3993,59 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_main_generation_name"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation_name"
-  parentId="version_groups_main_generation"
+  id="version_groups_version_group_name"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group_name"
+  parentId="version_groups_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
-  hasExpandableContent={false}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### name \{#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation_name\}
+##### name \{#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group_name\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+red-blue
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
-  id="version_groups_main_generation_url"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation_url"
-  parentId="version_groups_main_generation"
+  id="version_groups_version_group_url"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group_url"
+  parentId="version_groups_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### url \{#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation_url\}
+##### url \{#operation-api_v2_region_retrieve_responses_200_application-json_version_groups_version_group_url\}
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+https://pokeapi.co/api/v2/version-group/1/
+```
+
+</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
